26-Jan-2013 Fixing VisualStudio 2005 and 2008 selection of Express or Professional versions for VSSolution builds.

25-Jan-2013 Implemented C.ICharacterSet options. These just set #defines (_UNICODE,UNICODE) and _MBCS on the compiler options.

25-Jan-2013 Adding option '-noresponsefiles' when using command line builds to exclude the use of response files (assuming the tools used support them).

24-Jan-2013 Released 0.50 Alpha 1

24-Jan-2013 Removing obsolete API
 - Opus.Core.DirectoryCollection.Add
 - Opus.Core.FileCollection.AddRelativePaths
 - C.CxxObjectFileCollection.AddRelativePaths
 - C.ObjectFileCollection.AddRelativePaths
 - QtCommon.MocFileCollection.AddRelativePaths

23-Jan-2013 AssemblyVersion is now auto-incrementing. AssemblyInformationVersion is set to the current version.

23-Jan-2013 Removed notoolchain.rsp from the testpackages directory, and removed references to it in the test harness.

23-Jan-2013 Unit test Python scripts now accept an option to exclude some response files. E.g. if you don't have Mingw installed on your Windows box, then tests specifically for that toolchain can be excluded.

19-Jan-2013 Renamed OpusOptionInterfacePropertyGenerator to OpusOptionCodeGenerator

17-Jan-2013 Show definition file action identifies default package versions with an asterisk.

17-Jan-2013 Added -setdefaultversion=<true|false> command line action, which requires -dependent=<package> to be defined too.

17-Jan-2013 Changed the Opus definition file schema so that package <version> elements can contain an optional Boolean 'Default' attribute, which indicates a default version of that package. If there are multiple versions of that package, this is chosen. Only one default version may be set per package. The default version in definition files can be overridden on the command line with the -<packagename>.version=<versionnumber> action.
